--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,45 @@ body {
   width: 16px;
   margin-right: 4px;
 }
+
+.overview {
+  margin-top: 2em;
+}
+.card-small {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 2.5em;
+  background-color: #f0f3fa;
+  border-radius: 8px;
+  padding: 1.7em;
+}
+.card-small p {
+  margin: 0;
+}
+.card-small-icon {
+  text-align: right;
+}
+.card-small-views {
+  color: var(--gray);
+  font-weight: bold;
+  font-size: 0.9em;
+}
+.card-small-number {
+  font-weight: bold;
+  font-size: 2.6em;
+  line-height: 0.9em;
+}
+.card-small-percentage {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  color: var(--bright-red);
+  font-size: 0.9em;
+}
+.card-small-percentage span {
+  display: flex;
+  align-items: center;
+}
+.card-small-percentage img {
+  margin-right: 5px;
+}
