--- a/styles.css
+++ b/styles.css
@@ -23,17 +23,51 @@ body {
   display: grid;
   grid-row-gap: 24px;
 }
+.dark-mode {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1em;
+}
+.checkbox {
+  display: none;
+}
+.checkbox:checked ~ .switch::before {
+  transform: translateX(0px);
+}
+.switch {
+  height: 40px;
+  display: block;
+  border-radius: 20px;
+  background: var(--gray);
+  width: 80px;
+  padding: 5px;
+  cursor: pointer;
+  box-sizing: border-box;
+  user-select: none;
+}
+.switch::before {
+  content: '';
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: white;
+  transform: translateX(40px);
+  transition: 0.3s;
+  will-change: transform;
+}
+
 .header {
   background-color: #f8f9fe;
   padding-bottom: 100px;
   border-radius: 0 0 20px 20px;
-  padding-top: 2em;
+  padding-top: 1em;
 }
 .header h1 {
   margin: 0;
   font-size: 1.7em;
 }
-.header p {
+.header-title {
   color: var(--gray);
   margin: 0.5em 0;
   font-weight: 600;
@@ -221,5 +255,11 @@ h2 {
   }
   .card-small-views {
     color: #8088ad;
+  }
+  .switch {
+    background-image: linear-gradient(to right, #4796d2 0%, #37ce8f 100%);
+  }
+  .switch:before {
+    background-color: #282943;
   }
 }
