--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
-  color: #1d2029;
+  color: var(--baseColor);
+  background-color: var(--baseBackground);
 }
 :root {
   --lime-green: hsl(163, 72%, 41%);
@@ -15,6 +16,12 @@ body {
   --tiktok: #fe2c55;
   --gray: #5f616d;
   --cardGray: #f0f3fa;
+  --cardTitle: #6f717e;
+  --lightGray: #f8f9fe;
+  --baseBackground: #fff;
+  --baseColor: #1d2029;
+  --switchSpinner: white;
+  --switch: #5f616d;
 }
 .wrapper {
   padding: 0 30px;
@@ -38,7 +45,7 @@ body {
   height: 40px;
   display: block;
   border-radius: 20px;
-  background: var(--gray);
+  background: var(--switch);
   width: 80px;
   padding: 5px;
   cursor: pointer;
@@ -51,14 +58,14 @@ body {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: white;
+  background-color: var(--switchSpinner);
   transform: translateX(40px);
   transition: 0.3s;
   will-change: transform;
 }
 
 .header {
-  background-color: #f8f9fe;
+  background-color: var(--lightGray);
   padding-bottom: 100px;
   border-radius: 0 0 20px 20px;
   padding-top: 1em;
@@ -115,15 +122,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #6f717e;
+  color: var(--cardTitle);
   font-size: 0.9em;
   font-weight: bold;
 }
 .card-title img {
   margin-right: 4px;
 }
-.card-followers {
-}
+
 .card-followers-number {
   font-size: 48px;
   font-weight: 700;
@@ -159,7 +165,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-row-gap: 2.5em;
-  background-color: #f0f3fa;
+  background-color: var(--cardGray);
   border-radius: 8px;
   padding: 1.7em;
 }
@@ -170,7 +176,7 @@ h2 {
   text-align: right;
 }
 .card-small-views {
-  color: var(--gray);
+  color: var(--cardTitle);
   font-weight: bold;
   font-size: 0.9em;
 }
@@ -219,47 +225,51 @@ h2 {
   }
 }
 @media screen and (min-width: 1024px) {
-  body {
-  }
   .grid {
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 25px;
+  }
+  .header-grid {
+    display: grid;
+    grid-template-columns: 1fr 200px;
   }
   .wrapper {
     max-width: 1440px;
     margin: auto;
   }
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #1d2029;
-    color: white;
+  .header-title {
+    border: none;
   }
+}
+.is-dark-mode {
+  --cardGray: #252b43;
+  --gray: #8088ad;
+  --lightGray: #1d2029;
+  --baseBackground: #1d2029;
+  --baseColor: #fff;
+  --cardTitle: #6f717e;
+  --switchSpinner: #282943;
+  --switch: linear-gradient(to right, #4796d2 0%, #37ce8f 100%);
+}
+.is-light-mode {
+  --gray: #5f616d;
+  --cardGray: #f0f3fa;
+  --cardTitle: #6f717e;
+  --lightGray: #f8f9fe;
+  --baseBackground: #fff;
+  --baseColor: #1d2029;
+  --switchSpinner: white;
+  --switch: #5f616d;
+}
+@media (prefers-color-scheme: dark) {
   :root {
     --cardGray: #252b43;
     --gray: #8088ad;
-  }
-
-  .header {
-    background-color: #1d2029;
-  }
-  .card-title {
-    color: var(--gray);
-  }
-  .card-followers-title {
-    color: #8088ad;
-  }
-  .card-small {
-    background-color: #252b43;
-  }
-  .card-small-views {
-    color: #8088ad;
-  }
-  .switch {
-    background-image: linear-gradient(to right, #4796d2 0%, #37ce8f 100%);
-  }
-  .switch:before {
-    background-color: #282943;
+    --lightGray: #1d2029;
+    --baseBackground: #1d2029;
+    --baseColor: #fff;
+    --cardTitle: #6f717e;
+    --switchSpinner: #282943;
+    --switch: linear-gradient(to right, #4796d2 0%, #37ce8f 100%);
   }
 }
